fix: Hide text overflow

--- a/src/components/SearchList/SearchList.module.scss
+++ b/src/components/SearchList/SearchList.module.scss
@@ -30,9 +30,8 @@
       display: flex;
       width: 100%;
       height: 50px;
+      padding-right: 58px;
       line-height: 50px;
-      text-overflow: ellipsis;
-      white-space: nowrap;
       cursor: pointer;
       user-select: none;
 
@@ -44,7 +43,10 @@
 
       .recommended {
         width: 100%;
+        overflow: hidden;
         color: colors.$GRAY9;
+        text-overflow: ellipsis;
+        white-space: nowrap;
       }
 
       mark {
